# autoresearch

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  research_program.md
.cursor/rules/: agent-handoff-default-context.mdc
autoresearch/: __init__.py  cli.py  config.py  evals.py  evaluation.py  llm.py  llm_strategy.py  loop.py  models.py  report.py  storage.py  strategy.py  web.py  workspace.py
datasets/nightly/: skills_201_tool_use.json
docs/: agent-handoff.md  architecture-decisions.md
scripts/: deploy_docker.sh  railway_entrypoint.sh  render_report.sh  run_local.sh  run_web.sh  setup_local.sh
targets/mcp-201-prompts/: mcp_201_server.py
targets/mcp-201-prompts/server/: prompt_planner.py  prompt_text.py
targets/mcp-201-prompts/skills/: colorize_images.py
targets/skills-201/: README.md
targets/skills-201/.agents/skills/colorize-images/: SKILL.md
targets/skills-201/.cursor/skills/cropping-images/: SKILL.md
targets/skills-201/.cursor/skills/process-bw-images/: SKILL.md
tests/: test_llm_strategy.py  test_loop.py  test_report.py  test_web.py
