[project]
name = "autoresearch"
version = "0.1.0"
description = "Closed-loop skill and prompt improvement gated by evals-101."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autoresearch = "autoresearch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autoresearch*"]
